server/public/css/main.css
/* ... */
#bus2NameBody {            
    transform: translateX(28mm) translateY(82.4mm) !important; 
}
#bus2TimeBody {
    transform: translateX(40mm) translateY(87.5mm) !important; 
}
#bus2MinCONSTBody {
    transform: translateX(47.5mm) translateY(88mm) !important; 
}
#bus2IconBody {
    transform: translateX(6.7mm) translateY(80.8mm) !important; 
}
/* Bus 3 */
#bus3NumberBody {
    transform: translateX(19mm) translateY(99.1mm) !important; 
}
#bus3NameBody {            
    transform: translateX(28mm) translateY(100mm) !important; 
}
#bus3TimeBody {
    transform: translateX(40mm) translateY(105.2mm) !important; 
}
#bus3MinCONSTBody {
    transform: translateX(47.5mm) translateY(105.8mm) !important; 
}
#bus3IconBody {
    transform: translateX(6.7mm) translateY(98.2mm) !important; 
}
/* Bus 4 */
#bus4NumberBody {
    transform: translateX(19mm) translateY(116.6mm) !important; 
}
#bus4NameBody {            
    transform: translateX(28mm) translateY(117.5mm) !important; 
}
#bus4TimeBody {
    transform: translateX(40mm) translateY(122.7mm) !important; 
}
#bus4MinCONSTBody {
    transform: translateX(47.5mm) translateY(123.3mm) !important; 
}
#bus4IconBody {
    transform: translateX(6.8mm) translateY(115.8mm) !important; 
}
/* Bus 5 */
#bus5NumberBody {
    transform: translateX(19mm) translateY(134.1mm) !important; 
}
#bus5NameBody {            
    transform: translateX(28mm) translateY(135mm) !important; 
}
#bus5TimeBody {
    transform: translateX(40mm) translateY(140.2mm) !important; 
}
#bus5MinCONSTBody {
    transform: translateX(47.5mm) translateY(140.8mm) !important; 
}
#bus5IconBody {
    transform: translateX(6.8mm) translateY(133.5mm) !important; 
}
/* Bus 6 */
#bus6NumberBody {
    transform: translateX(19mm) translateY(151.6mm) !important; 
}
#bus6NameBody {            
    transform: translateX(28mm) translateY(152.5mm) !important; 
}
#bus6TimeBody {
    transform: translateX(40mm) translateY(157.7mm) !important; 
}
#bus6MinCONSTBody {
    transform: translateX(47.5mm) translateY(158.3mm) !important; 
}
#bus6IconBody {
    transform: translateX(6.8mm) translateY(151.1mm) !important; 
}
/*Lunch*/
#lunchDivBody {
    position: absolute;
    height: 16.9mm;
    width: 98.1mm;
    transform: translateX(15mm) translateY(178mm) !important;
}
.lunchBody {
    text-align: center;
    margin-top: 2mm;
}
/*CSS ON STANDARD FOOTER TEMPLATES*/
.busNameFooter {
    font-size: 3.2mm; 
    position: absolute; 
    overflow-x: hidden;
    white-space: nowrap;
    width: 30mm;
    height: 4.5mm;
}
.skanetrafikenTimeFooter {
    font-size: 3.8mm; 
    font-family: Arial; 
    position: absolute; 
}
.skanetrafikenMinFooter {
    color: rgb(90, 90, 90);
    font-size: 3.8mm; 
    font-family: Arial; 
    position: absolute; 
}
.busNumberFooter {
    font-size: 4mm; 
    position: absolute; 
}
.skanetrafikenIconsFooter {
    position: absolute; 
    max-width:5.6% !important;
}
/* Train 1 */
#train1Footer {            
    transform: translateX(84mm) translateY(282.8mm) !important; 
}
#train1TimeFooter {
    transform: translateX(125.3mm) translateY(283mm) !important; 
}
#train1MinCONSTFooter {
    transform: translateX(129.7mm) translateY(283mm) !important; 
}
#train1IconFooter {
    transform: translateX(72.4mm) translateY(281.8mm) !important; 
}
/* Train 2 */
#train2Footer {
    transform: translateX(84mm) translateY(290.2mm) !important; 
}
#train2TimeFooter {
    transform: translateX(125.3mm) translateY(290.5mm) !important; 
}
#train2MinCONSTFooter {
    transform: translateX(129.7mm) translateY(290.5mm) !important; 
}
#train2IconFooter {
    transform: translateX(72.4mm) translateY(289.2mm) !important; 
}
/* Train 3 */
#train3Footer {
    transform: translateX(84mm) translateY(297.5mm) !important;
}
#train3TimeFooter {
    transform: translateX(125.3mm) translateY(298mm) !important; 
}
#train3MinCONSTFooter {
    transform: translateX(129.7mm) translateY(298mm) !important; 
}
#train3IconFooter {
    transform: translateX(72.4mm) translateY(296.6mm) !important; 
}
/* Train 4 */
#train4Footer {
    transform: translateX(84mm) translateY(304.9mm) !important;
}
#train4TimeFooter {
    transform: translateX(125.3mm) translateY(305.5mm) !important; 
}
#train4MinCONSTFooter {
    transform: translateX(129.7mm) translateY(305.5mm) !important; 
}
#train4IconFooter {
    transform: translateX(72.4mm) translateY(304mm) !important; 
}
/* Train 5 */
#train5Footer {
    transform: translateX(84mm) translateY(312.4mm) !important;
}
#train5TimeFooter {
    transform: translateX(125.3mm) translateY(313mm) !important; 
}
#train5MinCONSTFooter {
    transform: translateX(129.7mm) translateY(313mm) !important; 
}
#train5IconFooter {
    transform: translateX(72.4mm) translateY(311.4mm) !important; 
}
/* Train 6 */
#train6Footer {
    transform: translateX(84mm) translateY(319.8mm) !important;
}
#train6TimeFooter {
    transform: translateX(125.3mm) translateY(320.5mm) !important; 
}
#train6MinCONSTFooter {
    transform: translateX(129.7mm) translateY(320.5mm) !important; 
}
#train6IconFooter {
    transform: translateX(72.4mm) translateY(318.8mm) !important; 
}
/* Bus 1 */
#bus1NumberFooter {
    transform: translateX(19mm) translateY(282.8mm) !important; 
}
#bus1NameFooter {            
    transform: translateX(27mm) translateY(283.4mm) !important; 
}
#bus1TimeFooter {
    transform: translateX(59.3mm) translateY(283mm) !important; 
}
#bus1MinCONSTFooter {
    transform: translateX(63.7mm) translateY(283mm) !important; 
}
#bus1IconFooter {
    transform: translateX(6.6mm) translateY(281.8mm) !important; 
}
/* Bus 2 */
#bus2NumberFooter {
    transform: translateX(19mm) translateY(290.2mm) !important; 
}
#bus2NameFooter {            
    transform: translateX(27mm) translateY(290.7mm) !important; 
}
#bus2TimeFooter {
    transform: translateX(59.3mm) translateY(290.5mm) !important; 
}
#bus2MinCONSTFooter {
    transform: translateX(63.7mm) translateY(290.5mm) !important; 
}
/* ... */

